; ModuleID = '/home/carl/AnghaBench/linux/virt/kvm/extr_kvm_main.c_kvm_vm_ioctl_enable_cap_generic.c'
source_filename = "/home/carl/AnghaBench/linux/virt/kvm/extr_kvm_main.c_kvm_vm_ioctl_enable_cap_generic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm = type { i32 }
%struct.kvm_enable_cap = type { i32, i32*, i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kvm*, %struct.kvm_enable_cap*)* @kvm_vm_ioctl_enable_cap_generic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kvm_vm_ioctl_enable_cap_generic(%struct.kvm* %0, %struct.kvm_enable_cap* %1) #0 {
  %3 = alloca %struct.kvm*, align 8
  %4 = alloca %struct.kvm_enable_cap*, align 8
  store %struct.kvm* %0, %struct.kvm** %3, align 8
  store %struct.kvm_enable_cap* %1, %struct.kvm_enable_cap** %4, align 8
  %5 = load %struct.kvm_enable_cap*, %struct.kvm_enable_cap** %4, align 8
  %6 = getelementptr inbounds %struct.kvm_enable_cap, %struct.kvm_enable_cap* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  switch i32 %7, label %8 [
  ]

8:                                                ; preds = %2
  %9 = load %struct.kvm*, %struct.kvm** %3, align 8
  %10 = load %struct.kvm_enable_cap*, %struct.kvm_enable_cap** %4, align 8
  %11 = call i32 @kvm_vm_ioctl_enable_cap(%struct.kvm* %9, %struct.kvm_enable_cap* %10)
  ret i32 %11
}

declare dso_local i32 @kvm_vm_ioctl_enable_cap(%struct.kvm*, %struct.kvm_enable_cap*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
